# Edra-PDF-Writer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/traits/: font_type.rs  mod.rs
src/types/: attribute_field.rs  content.rs  doc.rs  error.rs  font.rs  font_family.rs  font_reference.rs  font_style.rs  mod.rs  page.rs  text.rs  text_alignment.rs  writer.rs
