[package]
name = "edra"
version = "0.1.2"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
rand = "0.9.0"
chrono = "0.4.40"
bcrypt = "0.17.0"
derive_more = { version = "1.0.0", features = ["from"] }
openssl = { version = "0.10", features = ["vendored"] }
pdf-writer = "0.13.0"
serde_json = "1.0.140"
lopdf = "0.36.0"
hex = "0.4"